--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
-            "preLaunchTask": "gulp",
+            "preLaunchTask": "gulp default",
             "webRoot": "${workspaceFolder}"
         }
     ]
