rename to boardgame-toolbox

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "Board Game Toolkit",
+    "name": "Board Game Toolbox",
+    "short_name": "BG Toolbox",
     "icons": [
         {
             "src": "favicon.ico",
