re-arrange directory structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "isolatedModules": true,
         "noImplicitAny": false,
         "noEmit": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "baseUrl": "src"
     },
     "include": ["src"],
     "exclude": ["**/*.js"]
