--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1",
+        "tslint": "^5.17.0",
         "typescript": "3.4.5"
     },
     "scripts": {
