--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
         ]
     },
     "devDependencies": {
-        "gulp": "^4.0.2",
-        "gulp-clean-css": "^4.2.0",
-        "gulp-sass": "^4.0.2"
+        "node-sass": "^4.0.2"
     }
 }
