--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "@types/node": "12.0.0",
         "@types/react": "16.8.17",
         "@types/react-dom": "16.8.4",
+        "create-react-component-folder": "^0.1.30",
         "dexie": "^2.0.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-router": "^5.0.1",
         "react-scripts": "3.0.1",
         "tslint": "^5.17.0",
         "typescript": "3.4.5"
