remove strict null checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
+        "strictPropertyInitialization": false,
+        "strictNullChecks": false,
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
